@@ -1,6 +1,6 @@
 {
-  "timestamp" : "2022-04-16T16:29:33Z",
-  "count" : 17,
+  "timestamp" : "2022-04-30T08:25:54Z",
+  "count" : 9,
   "count_minmax" : [ 2, 17 ],
   "count_prev_day_inc" : 19,
   "count_prev_day_dec" : 0,
