@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-04-29T16:32:51Z",
+  "timestamp" : "2022-04-30T08:25:54Z",
   "count_outdated" : 2,
   "uniques_outdated" : 2,
-  "count" : 29,
+  "count" : 21,
   "uniques" : 5,
   "views" : [
     {
       "timestamp": "2022-04-16T00:00:00Z",
-      "count": 17,
+      "count": 9,
       "count_minmax": [ 2, 17 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
