@@ -1,10 +1,10 @@
 {
-  "count": 27,
+  "count": 19,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-04-16T00:00:00Z",
-      "count": 17,
+      "count": 9,
       "uniques": 1
     },
     {
