@@ -1,3 +1,9 @@
+2022-04-30T08:25:54Z:
+* notice: last 14d: all unq: 19 1
+* notice: prev accum: outdated-all outdated-unq / all unq: 2 2 / 29 5
+* notice: next accum: outdated-all outdated-unq / all unq: 2 2 / 21 5
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -8 // +0 +0 / -0 -8
+
 2022-04-29T16:32:51Z:
 * notice: last 14d: all unq: 27 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 0 0 / 29 5
